# russo

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Design.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
concepts/architecture/: index.html
concepts/protocols/: index.html
docs/: examples.md  index.md
docs/concepts/: architecture.md  protocols.md
docs/examples/: basic-pipeline.md  caching.md  concurrent-runs.md  config-driven.md  custom-agent.md  custom-evaluator.md  custom-parser.md  custom-synthesizer.md  gemini-adapter.md  http-agent.md  index.md  openai-adapter.md  pytest-integration.md  websocket-agent.md  websocket-testing.md
docs/getting-started/: first-test.md  installation.md
docs/reference/: index.md  pytest-plugin.md
docs/tutorial/: adapters.md  caching.md  evaluators.md  index.md  pipeline.md  pytest-plugin.md  synthesizers.md
examples/: README.md  basic_pipeline.py  caching.py  concurrent_runs.py  custom_agent.py  custom_evaluator.py  custom_parser.py  custom_synthesizer.py  gemini_adapter.py  http_agent.py  index.html  openai_adapter.py  websocket_agent.py
examples/basic-pipeline/: index.html
examples/caching/: index.html
examples/concurrent-runs/: index.html
examples/config-driven/: index.html
examples/config_driven/: config.yaml  run.py
examples/custom-agent/: index.html
examples/custom-evaluator/: index.html
examples/custom-parser/: index.html
examples/custom-synthesizer/: index.html
examples/gemini-adapter/: index.html
examples/http-agent/: index.html
examples/openai-adapter/: index.html
examples/pytest-integration/: index.html
examples/pytest_integration/: conftest.py  test_concurrent.py  test_flights.py
examples/websocket-agent/: index.html
examples/websocket-testing/: index.html
examples/websocket_testing/: conftest.py  server.py  test_agent.py
getting-started/first-test/: index.html
getting-started/installation/: index.html
reference/: index.html
search/: search_index.json
src/: lib.rs  main.rs
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_adapters.py  test_concurrent.py  test_parsers.py  test_pipeline.py  test_synthesizer.py
tutorial/: index.html
(+80 files in other folders)
